@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Added a note about possible issues with RegexpRefs, RT#127635.
 
 v0.3.4    2018-11-13 20:28:01+00:00 Europe/London
   [Documentation]
